acceptance/tests/fixtures/cases/api-gateways/kitchen-sink/gateway-policy.yaml
# Copyright (c) HashiCorp, Inc.
# SPDX-License-Identifier: MPL-2.0

apiVersion: consul.hashicorp.com/v1alpha1
kind: GatewayPolicy
metadata:
  name: my-policy
spec:
  targetRef:
    name: gateway
    sectionName: http-auth
    group: gateway.networking.k8s.io/v1
    kind: Gateway
  override:
    jwt:
      providers:
      - name: "local"
  default:
    jwt:
      providers:
      - name: "local"
        verifyClaims:
        - path:
            - role
          value: pet
