acceptance/tests/fixtures/cases/api-gateways/kitchen-sink/gatewayclassconfig.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

apiVersion: consul.hashicorp.com/v1alpha1
kind: GatewayClassConfig
metadata:
  name: gateway-class-config
spec:
  deployment:
    defaultInstances: 2
    maxInstances: 3
    minInstances: 1
